--- a/views/list.ejs
+++ b/views/list.ejs
@@ -14,10 +14,12 @@
 
     <div class="box">
       <% itemsList.forEach(element => { %>
-      <div class="item">
-        <input type="checkbox" />
-        <p><%= element.name %></p>
-      </div>
+      <form action="/delete" method="POST">
+        <div class="item">
+          <input type="checkbox" name="checkbox" value="<%= element.id %>" onchange="this.form.submit()" />
+          <p><%= element.name %></p>
+        </div>
+      </form>
       <% }); %>
       <form class="item" action="/" method="post">
         <input
