--- a/views/list.ejs
+++ b/views/list.ejs
@@ -19,6 +19,7 @@
           <input type="checkbox" name="checkbox" value="<%= element._id %>" onchange="this.form.submit()" />
           <p><%= element.name %></p>
         </div>
+        <input type="hidden" name="listName" value="<%= listTitle %>"></input>
       </form>
       <% }); %>
       <form class="item" action="/" method="post">
